# -Smart_Shelter-

./: .gitignore  CLAUDE.md  README.md  rp2040_modbus_rtu.ino
lamp_stack/: modbus_client.py  modbus_client_visual.py  pyproject.toml  requirements.txt
lamp_stack/database/: schema.sql
pesco_pv_project/: .gitignore  README.md  main.py  project.md  pyproject.toml
rp2040_master/: main.ino
rp2040_master/main/: main.ino
yolo_detection/: SETUP_GUIDE.md  camera_detection.py  modbus_controller.py  requirements.txt
